src/objects/AECOM_Delegation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Custom setting for delegation audit. When a new record gets created or approver is changed for an existing record, a trigger looks to this custom setting and creates audit records in delegation object.</description>
    <fields>
        <fullName>Escalation__c</fullName>
        <label>Escalation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>API Name of the field that is being tracked</description>
        <label>Field API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role assigned to the user</description>
        <label>Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Eco Delegation</label>
</CustomObject>